// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ThumbIndex > fires onChange when tab is clicked 1`] = `
<div>
  <div
    class="blong-thumb-index blong-thumb-index--horizontal  p-tabview p-component"
    data-pc-name="tabview"
    data-pc-section="root"
    id="pr_id_17"
  >
    <div
      class="p-tabview-nav-container"
      data-pc-section="navcontainer"
    >
      <div
        class="p-tabview-nav-content"
        data-pc-section="navcontent"
        id="pr_id_17_navcontent"
      >
        <ul
          class="p-tabview-nav"
          data-pc-section="nav"
          role="tablist"
        >
          <li
            class="p-unselectable-text p-tabview-selected p-highlight"
            data-pc-name="tabpanel"
            data-pc-section="header"
            role="presentation"
          >
            <a
              aria-controls="pr_id_170_content"
              aria-disabled="false"
              aria-selected="true"
              class="p-tabview-nav-link"
              data-pc-section="headeraction"
              id="pr_id_17_header_0"
              role="tab"
              tabindex="0"
            >
              <span
                class="p-tabview-title"
                data-pc-section="headertitle"
              >
                <span
                  class="blong-thumb-index__tab-header"
                >
                  <span>
                    First
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            class="p-unselectable-text"
            data-pc-name="tabpanel"
            data-pc-section="header"
            role="presentation"
          >
            <a
              aria-controls="pr_id_171_content"
              aria-disabled="false"
              aria-selected="false"
              class="p-tabview-nav-link"
              data-pc-section="headeraction"
              id="pr_id_17_header_1"
              role="tab"
              tabindex="-1"
            >
              <span
                class="p-tabview-title"
                data-pc-section="headertitle"
              >
                <span
                  class="blong-thumb-index__tab-header"
                >
                  <span>
                    Second
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            aria-hidden="true"
            class="p-tabview-ink-bar"
            data-pc-section="inkbar"
            role="presentation"
            style="left: 0px;"
          />
        </ul>
      </div>
    </div>
    <div
      class="p-tabview-panels"
      data-pc-section="panelcontainer"
    >
      <div
        aria-labelledby="pr_id_17_header_0"
        class="p-tabview-panel"
        data-pc-name="tabpanel"
        data-pc-section="content"
        id="pr_id_170_content"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`ThumbIndex > handles controlled activeId 1`] = `
<div>
  <div
    class="blong-thumb-index blong-thumb-index--horizontal  p-tabview p-component"
    data-pc-name="tabview"
    data-pc-section="root"
    id="pr_id_31"
  >
    <div
      class="p-tabview-nav-container"
      data-pc-section="navcontainer"
    >
      <div
        class="p-tabview-nav-content"
        data-pc-section="navcontent"
        id="pr_id_31_navcontent"
      >
        <ul
          class="p-tabview-nav"
          data-pc-section="nav"
          role="tablist"
        >
          <li
            class="p-unselectable-text"
            data-pc-name="tabpanel"
            data-pc-section="header"
            role="presentation"
          >
            <a
              aria-controls="pr_id_310_content"
              aria-disabled="false"
              aria-selected="false"
              class="p-tabview-nav-link"
              data-pc-section="headeraction"
              id="pr_id_31_header_0"
              role="tab"
              tabindex="-1"
            >
              <span
                class="p-tabview-title"
                data-pc-section="headertitle"
              >
                <span
                  class="blong-thumb-index__tab-header"
                >
                  <span>
                    Tab 1
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            class="p-unselectable-text p-tabview-selected p-highlight"
            data-pc-name="tabpanel"
            data-pc-section="header"
            role="presentation"
          >
            <a
              aria-controls="pr_id_311_content"
              aria-disabled="false"
              aria-selected="true"
              class="p-tabview-nav-link"
              data-pc-section="headeraction"
              id="pr_id_31_header_1"
              role="tab"
              tabindex="0"
            >
              <span
                class="p-tabview-title"
                data-pc-section="headertitle"
              >
                <span
                  class="blong-thumb-index__tab-header"
                >
                  <span>
                    Tab 2
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            aria-hidden="true"
            class="p-tabview-ink-bar"
            data-pc-section="inkbar"
            role="presentation"
            style="left: 0px;"
          />
        </ul>
      </div>
    </div>
    <div
      class="p-tabview-panels"
      data-pc-section="panelcontainer"
    >
      <div
        aria-labelledby="pr_id_31_header_1"
        class="p-tabview-panel"
        data-pc-name="tabpanel"
        data-pc-section="content"
        id="pr_id_311_content"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`ThumbIndex > renders empty tab set (horizontal) 1`] = `
<div>
  <div
    class="blong-thumb-index blong-thumb-index--horizontal  p-tabview p-component"
    data-pc-name="tabview"
    data-pc-section="root"
    id="pr_id_3"
  >
    <div
      class="p-tabview-nav-container"
      data-pc-section="navcontainer"
    >
      <div
        class="p-tabview-nav-content"
        data-pc-section="navcontent"
        id="pr_id_3_navcontent"
      >
        <ul
          class="p-tabview-nav"
          data-pc-section="nav"
          role="tablist"
        >
          <li
            aria-hidden="true"
            class="p-tabview-ink-bar"
            data-pc-section="inkbar"
            role="presentation"
            style="width: 0px;"
          />
        </ul>
      </div>
    </div>
    <div
      class="p-tabview-panels"
      data-pc-section="panelcontainer"
    />
  </div>
</div>
`;

exports[`ThumbIndex > renders tab items (horizontal) 1`] = `
<div>
  <div
    class="blong-thumb-index blong-thumb-index--horizontal  p-tabview p-component"
    data-pc-name="tabview"
    data-pc-section="root"
    id="pr_id_10"
  >
    <div
      class="p-tabview-nav-container"
      data-pc-section="navcontainer"
    >
      <div
        class="p-tabview-nav-content"
        data-pc-section="navcontent"
        id="pr_id_10_navcontent"
      >
        <ul
          class="p-tabview-nav"
          data-pc-section="nav"
          role="tablist"
        >
          <li
            class="p-unselectable-text p-tabview-selected p-highlight"
            data-pc-name="tabpanel"
            data-pc-section="header"
            role="presentation"
          >
            <a
              aria-controls="pr_id_100_content"
              aria-disabled="false"
              aria-selected="true"
              class="p-tabview-nav-link"
              data-pc-section="headeraction"
              id="pr_id_10_header_0"
              role="tab"
              tabindex="0"
            >
              <span
                class="p-tabview-title"
                data-pc-section="headertitle"
              >
                <span
                  class="blong-thumb-index__tab-header"
                >
                  <span>
                    A
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            class="p-unselectable-text"
            data-pc-name="tabpanel"
            data-pc-section="header"
            role="presentation"
          >
            <a
              aria-controls="pr_id_101_content"
              aria-disabled="false"
              aria-selected="false"
              class="p-tabview-nav-link"
              data-pc-section="headeraction"
              id="pr_id_10_header_1"
              role="tab"
              tabindex="-1"
            >
              <span
                class="p-tabview-title"
                data-pc-section="headertitle"
              >
                <span
                  class="blong-thumb-index__tab-header"
                >
                  <span>
                    B
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            class="p-unselectable-text"
            data-pc-name="tabpanel"
            data-pc-section="header"
            role="presentation"
          >
            <a
              aria-controls="pr_id_102_content"
              aria-disabled="false"
              aria-selected="false"
              class="p-tabview-nav-link"
              data-pc-section="headeraction"
              id="pr_id_10_header_2"
              role="tab"
              tabindex="-1"
            >
              <span
                class="p-tabview-title"
                data-pc-section="headertitle"
              >
                <span
                  class="blong-thumb-index__tab-header"
                >
                  <span>
                    C
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            aria-hidden="true"
            class="p-tabview-ink-bar"
            data-pc-section="inkbar"
            role="presentation"
            style="left: 0px;"
          />
        </ul>
      </div>
    </div>
    <div
      class="p-tabview-panels"
      data-pc-section="panelcontainer"
    >
      <div
        aria-labelledby="pr_id_10_header_0"
        class="p-tabview-panel"
        data-pc-name="tabpanel"
        data-pc-section="content"
        id="pr_id_100_content"
        role="tabpanel"
      >
        <div>
          Content for 
          A
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ThumbIndex > renders vertical layout 1`] = `
<div>
  <div
    class="blong-thumb-index blong-thumb-index--vertical "
  >
    <nav
      class="blong-thumb-index__nav"
    >
      <div
        class="blong-thumb-index__nav-group"
      >
        <ul
          class="blong-thumb-index__nav-items"
        >
          <li
            class="blong-thumb-index__nav-item blong-thumb-index__nav-item--active"
          >
            <button
              class="blong-thumb-index__nav-btn"
              type="button"
            >
              X
            </button>
          </li>
        </ul>
      </div>
      <div
        class="blong-thumb-index__nav-group"
      >
        <ul
          class="blong-thumb-index__nav-items"
        >
          <li
            class="blong-thumb-index__nav-item "
          >
            <button
              class="blong-thumb-index__nav-btn"
              type="button"
            >
              Y
            </button>
          </li>
        </ul>
      </div>
    </nav>
    <div
      class="blong-thumb-index__content"
    >
      <div>
        X
      </div>
    </div>
  </div>
</div>
`;

exports[`ThumbIndex > renders vertical layout with group items 1`] = `
<div>
  <div
    class="blong-thumb-index blong-thumb-index--vertical "
  >
    <nav
      class="blong-thumb-index__nav"
    >
      <div
        class="blong-thumb-index__nav-group"
      >
        <button
          class="blong-thumb-index__nav-icon"
          type="button"
        >
          <i
            class="pi pi-folder"
          />
        </button>
        <ul
          class="blong-thumb-index__nav-items"
        >
          <li
            class="blong-thumb-index__nav-item blong-thumb-index__nav-item--active"
          >
            <button
              class="blong-thumb-index__nav-btn"
              type="button"
            >
              Child 1
            </button>
          </li>
          <li
            class="blong-thumb-index__nav-item "
          >
            <button
              class="blong-thumb-index__nav-btn"
              type="button"
            >
              Child 2
            </button>
          </li>
        </ul>
      </div>
    </nav>
    <div
      class="blong-thumb-index__content"
    >
      <div>
        Child 1
      </div>
    </div>
  </div>
</div>
`;

exports[`ThumbIndex > renders with bottom orientation (horizontal TabView) 1`] = `
<div>
  <div
    class="blong-thumb-index blong-thumb-index--horizontal  p-tabview p-component"
    data-pc-name="tabview"
    data-pc-section="root"
    id="pr_id_24"
  >
    <div
      class="p-tabview-nav-container"
      data-pc-section="navcontainer"
    >
      <div
        class="p-tabview-nav-content"
        data-pc-section="navcontent"
        id="pr_id_24_navcontent"
      >
        <ul
          class="p-tabview-nav"
          data-pc-section="nav"
          role="tablist"
        >
          <li
            class="p-unselectable-text p-tabview-selected p-highlight"
            data-pc-name="tabpanel"
            data-pc-section="header"
            role="presentation"
          >
            <a
              aria-controls="pr_id_240_content"
              aria-disabled="false"
              aria-selected="true"
              class="p-tabview-nav-link"
              data-pc-section="headeraction"
              id="pr_id_24_header_0"
              role="tab"
              tabindex="0"
            >
              <span
                class="p-tabview-title"
                data-pc-section="headertitle"
              >
                <span
                  class="blong-thumb-index__tab-header"
                >
                  <span>
                    One
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            class="p-unselectable-text"
            data-pc-name="tabpanel"
            data-pc-section="header"
            role="presentation"
          >
            <a
              aria-controls="pr_id_241_content"
              aria-disabled="false"
              aria-selected="false"
              class="p-tabview-nav-link"
              data-pc-section="headeraction"
              id="pr_id_24_header_1"
              role="tab"
              tabindex="-1"
            >
              <span
                class="p-tabview-title"
                data-pc-section="headertitle"
              >
                <span
                  class="blong-thumb-index__tab-header"
                >
                  <span>
                    Two
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            aria-hidden="true"
            class="p-tabview-ink-bar"
            data-pc-section="inkbar"
            role="presentation"
            style="left: 0px;"
          />
        </ul>
      </div>
    </div>
    <div
      class="p-tabview-panels"
      data-pc-section="panelcontainer"
    >
      <div
        aria-labelledby="pr_id_24_header_0"
        class="p-tabview-panel"
        data-pc-name="tabpanel"
        data-pc-section="content"
        id="pr_id_240_content"
        role="tabpanel"
      >
        <span>
          One
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ThumbIndex > renders with icons in items 1`] = `
<div>
  <div
    class="blong-thumb-index blong-thumb-index--horizontal  p-tabview p-component"
    data-pc-name="tabview"
    data-pc-section="root"
    id="pr_id_38"
  >
    <div
      class="p-tabview-nav-container"
      data-pc-section="navcontainer"
    >
      <div
        class="p-tabview-nav-content"
        data-pc-section="navcontent"
        id="pr_id_38_navcontent"
      >
        <ul
          class="p-tabview-nav"
          data-pc-section="nav"
          role="tablist"
        >
          <li
            class="p-unselectable-text p-tabview-selected p-highlight"
            data-pc-name="tabpanel"
            data-pc-section="header"
            role="presentation"
          >
            <a
              aria-controls="pr_id_380_content"
              aria-disabled="false"
              aria-selected="true"
              class="p-tabview-nav-link"
              data-pc-section="headeraction"
              id="pr_id_38_header_0"
              role="tab"
              tabindex="0"
            >
              <span
                class="p-tabview-title"
                data-pc-section="headertitle"
              >
                <span
                  class="blong-thumb-index__tab-header"
                >
                  <i
                    class="pi pi-home"
                  />
                  <span>
                    Home
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            class="p-unselectable-text"
            data-pc-name="tabpanel"
            data-pc-section="header"
            role="presentation"
          >
            <a
              aria-controls="pr_id_381_content"
              aria-disabled="false"
              aria-selected="false"
              class="p-tabview-nav-link"
              data-pc-section="headeraction"
              id="pr_id_38_header_1"
              role="tab"
              tabindex="-1"
            >
              <span
                class="p-tabview-title"
                data-pc-section="headertitle"
              >
                <span
                  class="blong-thumb-index__tab-header"
                >
                  <i
                    class="pi pi-cog"
                  />
                  <span>
                    Settings
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            aria-hidden="true"
            class="p-tabview-ink-bar"
            data-pc-section="inkbar"
            role="presentation"
            style="left: 0px;"
          />
        </ul>
      </div>
    </div>
    <div
      class="p-tabview-panels"
      data-pc-section="panelcontainer"
    >
      <div
        aria-labelledby="pr_id_38_header_0"
        class="p-tabview-panel"
        data-pc-name="tabpanel"
        data-pc-section="content"
        id="pr_id_380_content"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;
